fixed portfolio image cropping issue

--- a/assets/css/components/_image.scss
+++ b/assets/css/components/_image.scss
@@ -20,19 +20,12 @@
     }
   }
   .case-image {
-    height: 400px;
     width: 100%;
     overflow: hidden;
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-    @media screen and (min-width: $ssTablet) {
-      height: 480px;
-    }
-    @media screen and (min-width: $ssLaptop) {
-      height: 800px;
     }
   }
   .case-image-full {
